Fix z-index bis

--- a/src/main.scss
+++ b/src/main.scss
@@ -19,7 +19,6 @@
     left: 0;
     right: 0;
     overflow: auto;
-    z-index: 1;
   }
 }
 
